# RyuaNerin_kakao-qr-api-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: core.rs  err.rs  main.rs
