[package]

name = "kakao-qr-api-rust"
version = "0.1.0"
authors = ["RyuaNerin <admin@ryuar.in>"]
edition = "2018"
description = "Rust implementation of RyuaNerin/kakao-qr-api-go."
repository = "https://github.com/RyuaNerin/kakao-qr-api-rust"
license = "GNU Affero General Public License v3.0"
license-file = "LICENSE"
readme = "README.md"
keywords = ["kakao", "qrcode"]



[dependencies]

async-std = "1.9.0"
failure = "0.1.6"
headless_chrome = "0.9.0"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
qrcode-generator = "4.1.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
reqwest = { version = "0.11.3", features = ["json", "cookies"] }
